arch/k8s.homework/manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otusarchk8s1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otusarchk8s1
  template:
    metadata:
      labels:
        app: otusarchk8s1
    spec:
      containers:
      - name: otusarchk8s1
        image: amikheenko/otus.arch.k8s.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
