arch/k8s.homework/manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusarchk8s1
spec:
  type: NodePort
  selector:
    app: otusarchk8s1
  ports:
  - port: 8000
    targetPort: 8000
