arch/k8s.homework/manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arch.homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/amikheenko($|/)(.*)
        backend:
          serviceName: otusarchk8s1
          servicePort: 8000
